version/0.11/_sources/API/visualization/_autosummary/ansys.aedt.core.visualization.report.standard.Spectral.rst.txt
Spectral
========

.. currentmodule:: ansys.aedt.core.visualization.report.standard

.. autoclass:: Spectral

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      Spectral.add_cartesian_x_marker
      
      
      Spectral.add_cartesian_y_marker
      
      
      Spectral.add_limit_line_from_equation
      
      
      Spectral.add_limit_line_from_points
      
      
      Spectral.add_note
      
      
      Spectral.add_trace_to_report
      
      
      Spectral.apply_report_template
      
      
      Spectral.create
      
      
      Spectral.delete
      
      
      Spectral.delete_traces
      
      
      Spectral.edit_general_settings
      
      
      Spectral.edit_grid
      
      
      Spectral.edit_header
      
      
      Spectral.edit_legend
      
      
      Spectral.edit_x_axis
      
      
      Spectral.edit_x_axis_scaling
      
      
      Spectral.edit_y_axis
      
      
      Spectral.edit_y_axis_scaling
      
      
      Spectral.export_config
      
      
      Spectral.get_solution_data
      
      
      Spectral.hide_legend
      
      
      Spectral.import_traces
      
      
      Spectral.update_expressions_with_defaults
      
      
      Spectral.update_trace_in_report
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      Spectral.adjust_coherent_gain
      Spectral.differential_pairs
      Spectral.domain
      Spectral.expressions
      Spectral.kaiser_coeff
      Spectral.limit_lines
      Spectral.matrix
      Spectral.max_frequency
      Spectral.notes
      Spectral.plot_continous_spectrum
      Spectral.plot_name
      Spectral.polyline
      Spectral.primary_sweep
      Spectral.primary_sweep_range
      Spectral.properties
      Spectral.reduced_matrix
      Spectral.report_category
      Spectral.report_type
      Spectral.secondary_sweep
      Spectral.secondary_sweep_range
      Spectral.time_start
      Spectral.time_stop
      Spectral.traces
      Spectral.use_pulse_in_tdr
      Spectral.variations
      Spectral.window
   
   